--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,1 +1,23 @@
-/* Styles go here */
+#big-banner{
+	background: url("/b1.jpg") no-repeat center center fixed;
+	background-size: cover;
+	-webkit-background-size: cover;
+	-o-background-size: cover;
+	-moz-background-size: cover;
+	position:fixed;
+    padding:0;
+    margin:0;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+}
+#box{
+	width:500px;
+	padding: 15px 15px;
+	border-radius:15px;
+	background-color:rgba(50,50,50,0.5);
+}
+div{
+	border-color: rgb(255,255,255);
+}
