--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,7 +4,7 @@
 	-webkit-background-size: cover;
 	-o-background-size: cover;
 	-moz-background-size: cover;
-	position:fixed;
+	/* position:fixed; */
     padding:0;
     margin:0;
     top:0;
